# src/api/api.go
@@ -6,6 +6,8 @@ import (
 	dailyNok "github.com/caldeirag/go-api/src/api/graph/daily/nok"
 	"github.com/caldeirag/go-api/src/api/graph/hourly"
 	hourlyNok "github.com/caldeirag/go-api/src/api/graph/hourly/nok"
+	"github.com/caldeirag/go-api/src/api/graph/monthly"
+	monthlyNok "github.com/caldeirag/go-api/src/api/graph/monthly/nok"
 	"github.com/caldeirag/go-api/src/api/production"
 	"github.com/caldeirag/go-api/src/api/schedule"
 	"github.com/caldeirag/go-api/src/api/scrap"
@@ -81,6 +83,8 @@ func GraphRouter() chi.Router {
 	graphRoute.Get("/hourlynok/{line_id}", hourlyNok.HourlyNOK)
 	graphRoute.Get("/daily/{line_id}", daily.DailyProduction)
 	graphRoute.Get("/dailynok/{line_id}", dailyNok.DailyNOK)
+	graphRoute.Get("/monthly/{line_id}", monthly.MonthlyProduction)
+	graphRoute.Get("/monthlynok/{line_id}", monthlyNok.MonthlyNOK)
 
 	// Return the Sub-Route back to the main API Router in main.go
 	return graphRoute
